[package]
name = "novaswap-factory"
version = "1.0.0"
authors = ["Carina-Labs"]
edition = "2021"
description = "The Novaswap factory contract implementation"
license = "MIT"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
novaswap = { path = "../../packages/novaswap", default-features = false }
cw2 = { version = "0.13" }
cw20 = { version = "0.13" }
cw-utils = "0.13"
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = {version = "0.13"}
prost = "0.9"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cosmwasm-bignumber = "2.2.0"

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false, features = ["iterator"] }
cosmwasm-schema = "1.0"
proptest = "1.0.0"
novaswap-token = {path = "../token"}